# dm-eiq-genai-flow-demonstrator

./: .copyrighter.ignore.yaml  .gitattributes  .gitignore  README.md  SBOM-eIQ-GenAI-Flow_Package-1.0.spdx.json
eiq_genai_flow/: audio_config.sh  install.sh
eiq_genai_flow/_internal/: libQt6Core.so.6  libQt6DBus.so.6  libQt6Gui.so.6  libQt6Test.so.6  libQt6Widgets.so.6  libabsl_base.so.2407.0.0  (+180 more)
meta-eiq-genai-flow/: README
retrieval-database-generator/: LICENSE.txt  README.md  install.sh  pyproject.toml
retrieval-database-generator/src/data/: rag_database.pkl
retrieval-database-generator/src/data/chunked_files/: Garbage_model.json  Medical_HiRAG_chunks.json  Medical_hand_made_chunks.json  garbage_model.json
retrieval-database-generator/src/data/parsed_files/: Medical.md
retrieval-database-generator/src/document_parsing/: __main__.py  config.py  docling_parser.py  utils.py
retrieval-database-generator/src/document_parsing/examples/: run_docling.py
retrieval-database-generator/src/rag/: __main__.py  config.py  retrieval.py  utils.py
retrieval-database-generator/src/rag/examples/: run_llm.py
retrieval-database-generator/src/rag/models/embedding_models/: embedding_models.py
retrieval-database-generator/src/rag/models/llms/: config.py  huggingface_llm.py
retrieval-database-generator/src/rag/preprocessing/: generate_chunks.py  generate_embeddings.py
retrieval-database-generator/src/rag/preprocessing/hirag/: README.md  config.py  hirag_text_splitters.py
retrieval-database-generator/src/rag/preprocessing/hirag/examples/: run_hirag.py
(+55 files in other folders)
