[project]
name = "rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation project compliant with the LLM Pipeline project."
authors = [
    {name = "Enzo Ruedas", email = "enzo.ruedas@nxp.com"},
]
readme = "README.md"

# Main runtime dependencies
dependencies = [
    "typer==0.12.5",
    "torch==2.6.0",
    "colorama==0.4.6",
    "transformers==4.49.0",
    "onnxruntime==1.20.1",
    "langchain-text-splitters==0.3.2",
    "spacy==3.7.5",
    "nltk==3.9.1",
    "accelerate==0.30.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "."

[tool.setuptools.packages.find]
where = ["src", "src/rag/preprocessing"]